--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@bespunky/angular-zen": "^3.1.0",
     "@nrwl/angular": "12.0.7",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
