--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@bespunky/angular-cdk/navigables": ["libs/navigables/src/index.ts"],
-      "@bespunky/angular-cdk/timeline": ["libs/timeline/src/index.ts"]
+      "@bespunky/angular-cdk/navigables": ["libs/navigables"],
+      "@bespunky/angular-cdk/navigables/*": ["libs/navigables/*"],
+      "@bespunky/angular-cdk/timeline": ["libs/timeline"],
+      "@bespunky/angular-cdk/timeline/*": ["libs/timeline/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
