➕ Implemented camera and refactored code into libraries

--- a/angular.json
+++ b/angular.json
@@ -220,6 +220,77 @@
           }
         }
       }
+    },
+    "shared": {
+      "projectType": "library",
+      "root": "libs/shared",
+      "sourceRoot": "libs/shared",
+      "prefix": "bs",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/shared/tsconfig.lib.json",
+            "project": "libs/shared/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/shared/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/shared/**/*.ts", "libs/shared/**/*.html"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared"],
+          "options": {
+            "jestConfig": "libs/shared/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "reactive-input": {
+      "projectType": "library",
+      "root": "libs/reactive-input",
+      "sourceRoot": "libs/reactive-input",
+      "prefix": "bs",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:package",
+          "options": {
+            "tsConfig": "libs/reactive-input/tsconfig.lib.json",
+            "project": "libs/reactive-input/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/reactive-input/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/reactive-input/**/*.ts",
+              "libs/reactive-input/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/reactive-input"],
+          "options": {
+            "jestConfig": "libs/reactive-input/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   }
 }
