--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,11 @@
       "@bespunky/angular-cdk/navigables": ["libs/navigables"],
       "@bespunky/angular-cdk/navigables/*": ["libs/navigables/*"],
       "@bespunky/angular-cdk/timeline": ["libs/timeline"],
-      "@bespunky/angular-cdk/timeline/*": ["libs/timeline/*"]
+      "@bespunky/angular-cdk/timeline/*": ["libs/timeline/*"],
+      "@bespunky/angular-cdk/shared": ["libs/shared"],
+      "@bespunky/angular-cdk/shared/*": ["libs/shared/*"],
+      "@bespunky/angular-cdk/reactive-input": ["libs/reactive-input"],
+      "@bespunky/angular-cdk/reactive-input/*": ["libs/reactive-input/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
