--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/router": "^11.2.0",
     "@bespunky/angular-zen": "^3.1.0",
     "@nrwl/angular": "12.0.7",
+    "date-fns": "^2.21.1",
     "rxjs": "~6.6.3",
     "ts-key-enum": "^2.0.7",
     "tslib": "^2.0.0",
