--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "@nrwl/jest": "12.0.7",
     "@nrwl/linter": "12.0.7",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/storybook": "^12.0.8",
     "@nrwl/tao": "12.0.7",
     "@nrwl/workspace": "12.0.7",
+    "@storybook/addon-essentials": "^6.2.8",
+    "@storybook/angular": "^6.2.8",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
