✨ Applied storybook schematics

--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,7 @@
     "shared": { "tags": [] },
     "reactive-input": { "tags": [] },
     "demo": { "tags": [] },
-    "demo-e2e": { "tags": [], "implicitDependencies": ["demo"] }
+    "demo-e2e": { "tags": [], "implicitDependencies": ["demo"] },
+    "timeline-e2e": { "tags": [], "implicitDependencies": ["timeline"] }
   }
 }
