--- a/angular.json
+++ b/angular.json
@@ -219,6 +219,37 @@
             "jestConfig": "libs/timeline/jest.config.js",
             "passWithNoTests": true
           }
+        },
+        "storybook": {
+          "builder": "@nrwl/storybook:storybook",
+          "options": {
+            "uiFramework": "@storybook/angular",
+            "port": 4400,
+            "config": {
+              "configFolder": "libs/timeline/.storybook"
+            }
+          },
+          "configurations": {
+            "ci": {
+              "quiet": true
+            }
+          }
+        },
+        "build-storybook": {
+          "builder": "@nrwl/storybook:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "uiFramework": "@storybook/angular",
+            "outputPath": "dist/storybook/timeline",
+            "config": {
+              "configFolder": "libs/timeline/.storybook"
+            }
+          },
+          "configurations": {
+            "ci": {
+              "quiet": true
+            }
+          }
         }
       }
     },
@@ -400,6 +431,32 @@
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/demo-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
+    "timeline-e2e": {
+      "root": "apps/timeline-e2e",
+      "sourceRoot": "apps/timeline-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/timeline-e2e/cypress.json",
+            "tsConfig": "apps/timeline-e2e/tsconfig.e2e.json",
+            "devServerTarget": "timeline:storybook"
+          },
+          "configurations": {
+            "ci": {
+              "devServerTarget": "timeline:storybook:ci"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/timeline-e2e/**/*.{js,ts}"]
           }
         }
       }
