--- a/libs/timeline/.eslintrc.json
+++ b/libs/timeline/.eslintrc.json
@@ -8,15 +8,28 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": { "project": ["libs/timeline/tsconfig.*?.json"] },
+      "parserOptions": {
+        "project": [
+          "libs/timeline/tsconfig.*?.json",
+          "libs\\timeline\\.storybook\\tsconfig.json"
+        ]
+      },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
-          { "type": "attribute", "prefix": "bs", "style": "camelCase" }
+          {
+            "type": "attribute",
+            "prefix": "bs",
+            "style": "camelCase"
+          }
         ],
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "bs", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "bs",
+            "style": "kebab-case"
+          }
         ]
       }
     },
