--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "@nrwl/tao": "12.0.7",
     "@nrwl/workspace": "12.0.7",
     "@storybook/addon-essentials": "^6.2.8",
+    "@storybook/addon-knobs": "^6.1.11",
     "@storybook/angular": "^6.2.8",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/webpack": "4.41.21",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "cypress": "^6.0.1",
