--- a/libs/timeline/tsconfig.lib.json
+++ b/libs/timeline/tsconfig.lib.json
@@ -16,9 +16,7 @@
   },
   "exclude": [
     "test-setup.ts",
-    "**/*.spec.ts",
-    "**/*.stories.ts",
-    "**/*.stories.js"
+    "**/*.spec.ts"
   ],
   "include": ["**/*.ts"]
 }
