✨ Applied storybook schematics to timeline library

--- a/libs/timeline/.eslintrc.json
+++ b/libs/timeline/.eslintrc.json
@@ -10,7 +10,8 @@
       ],
       "parserOptions": {
         "project": [
-          "libs/timeline/tsconfig.*?.json"
+          "libs/timeline/tsconfig.*?.json",
+          "libs\\timeline\\.storybook\\tsconfig.json"
         ]
       },
       "rules": {
