--- a/libs/timeline/tsconfig.lib.json
+++ b/libs/timeline/tsconfig.lib.json
@@ -16,7 +16,9 @@
   },
   "exclude": [
     "test-setup.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "**/*.stories.ts",
+    "**/*.stories.js"
   ],
   "include": ["**/*.ts"]
 }
