--- a/nx.json
+++ b/nx.json
@@ -22,10 +22,10 @@
       "tags": [],
       "implicitDependencies": ["official-site"]
     },
-    "navigables": { "tags": [] },
-    "timeline": { "tags": [] },
-    "shared": { "tags": [] },
-    "reactive-input": { "tags": [] },
-    "timeline-e2e": { "tags": [], "implicitDependencies": ["timeline"] }
+    "shared"        : { "tags": [] },
+    "reactive-input": { "tags": [], "implicitDependencies": ["shared"]  },
+    "navigables"    : { "tags": [], "implicitDependencies": ["reactive-input"]  },
+    "timeline"      : { "tags": [], "implicitDependencies": ["navigables", "reactive-input", "shared"]  },
+    "timeline-e2e"  : { "tags": [], "implicitDependencies": ["timeline"] }
   }
 }
