--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,14 +15,14 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@bespunky/angular-cdk/navigables": ["libs/navigables"],
-      "@bespunky/angular-cdk/navigables/*": ["libs/navigables/*"],
-      "@bespunky/angular-cdk/timeline": ["libs/timeline"],
-      "@bespunky/angular-cdk/timeline/*": ["libs/timeline/*"],
-      "@bespunky/angular-cdk/shared": ["libs/shared"],
-      "@bespunky/angular-cdk/shared/*": ["libs/shared/*"],
-      "@bespunky/angular-cdk/reactive-input": ["libs/reactive-input"],
-      "@bespunky/angular-cdk/reactive-input/*": ["libs/reactive-input/*"]
+      "@bespunky/angular-cdk/shared"          : ["libs/shared"],
+      "@bespunky/angular-cdk/shared/*"        : ["libs/shared/*"],
+      "@bespunky/angular-cdk/reactive-input"  : ["libs/reactive-input"],
+      "@bespunky/angular-cdk/reactive-input/*": ["libs/reactive-input/*"],
+      "@bespunky/angular-cdk/navigables"      : ["libs/navigables"],
+      "@bespunky/angular-cdk/navigables/*"    : ["libs/navigables/*"],
+      "@bespunky/angular-cdk/timeline"        : ["libs/timeline"],
+      "@bespunky/angular-cdk/timeline/*"      : ["libs/timeline/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
