--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "@nrwl/storybook": "^12.0.8",
     "@nrwl/tao": "12.0.7",
     "@nrwl/workspace": "12.0.7",
-    "@storybook/addon-essentials": "^6.2.8",
-    "@storybook/addon-knobs": "^6.1.11",
-    "@storybook/angular": "^6.2.8",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-knobs": "6.2.9",
+    "@storybook/angular": "6.2.9",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@types/webpack": "4.41.21",
