--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@nrwl/eslint-plugin-nx": "12.0.7",
     "@nrwl/jest": "12.0.7",
     "@nrwl/linter": "12.0.7",
+    "@nrwl/node": "^12.0.8",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/storybook": "^12.0.8",
     "@nrwl/tao": "12.0.7",
