⏪ Reverted typescript library schematics
Library will be created with new node schematics

--- a/nx.json
+++ b/nx.json
@@ -22,14 +22,10 @@
       "tags": [],
       "implicitDependencies": ["official-site"]
     },
-    "shared": { "tags": [] },
-    "reactive-input": { "tags": [], "implicitDependencies": ["shared"] },
-    "navigables": { "tags": [], "implicitDependencies": ["reactive-input"] },
-    "timeline": {
-      "tags": [],
-      "implicitDependencies": ["navigables", "reactive-input", "shared"]
-    },
-    "timeline-e2e": { "tags": [], "implicitDependencies": ["timeline"] },
-    "typscript-utils": { "tags": [] }
+    "shared"        : { "tags": [] },
+    "reactive-input": { "tags": [], "implicitDependencies": ["shared"]  },
+    "navigables"    : { "tags": [], "implicitDependencies": ["reactive-input"]  },
+    "timeline"      : { "tags": [], "implicitDependencies": ["navigables", "reactive-input", "shared"]  },
+    "timeline-e2e"  : { "tags": [], "implicitDependencies": ["timeline"] }
   }
 }
