--- a/angular.json
+++ b/angular.json
@@ -349,6 +349,30 @@
           }
         }
       }
+    },
+    "typescript-utils": {
+      "root": "libs/typescript-utils",
+      "sourceRoot": "libs/typescript-utils/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/typescript-utils/**/*.ts"]
+          }
+        },
+        "build": {
+          "builder": "@nrwl/node:package",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/libs/typescript-utils",
+            "tsConfig": "libs/typescript-utils/tsconfig.lib.json",
+            "packageJson": "libs/typescript-utils/package.json",
+            "main": "libs/typescript-utils/src/index.ts",
+            "assets": ["libs/typescript-utils/*.md"]
+          }
+        }
+      }
     }
   }
 }
