--- a/nx.json
+++ b/nx.json
@@ -22,10 +22,14 @@
       "tags": [],
       "implicitDependencies": ["official-site"]
     },
-    "shared"        : { "tags": [] },
-    "reactive-input": { "tags": [], "implicitDependencies": ["shared"]  },
-    "navigables"    : { "tags": [], "implicitDependencies": ["reactive-input"]  },
-    "timeline"      : { "tags": [], "implicitDependencies": ["navigables", "reactive-input", "shared"]  },
-    "timeline-e2e"  : { "tags": [], "implicitDependencies": ["timeline"] }
+    "shared": { "tags": [] },
+    "reactive-input": { "tags": [], "implicitDependencies": ["shared"] },
+    "navigables": { "tags": [], "implicitDependencies": ["reactive-input"] },
+    "timeline": {
+      "tags": [],
+      "implicitDependencies": ["navigables", "reactive-input", "shared"]
+    },
+    "timeline-e2e": { "tags": [], "implicitDependencies": ["timeline"] },
+    "typescript-utils": { "tags": [] }
   }
 }
