--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,9 @@
       "@bespunky/angular-cdk/navigables"      : ["libs/navigables"],
       "@bespunky/angular-cdk/navigables/*"    : ["libs/navigables/*"],
       "@bespunky/angular-cdk/timeline"        : ["libs/timeline"],
-      "@bespunky/angular-cdk/timeline/*"      : ["libs/timeline/*"]
+      "@bespunky/angular-cdk/timeline/*"      : ["libs/timeline/*"],
+      "@bespunky/typescript-utils"            : ["libs/typescript-utils"],
+      "@bespunky/typescript-utils/*"          : ["libs/typescript-utils/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
