--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@bespunky/angular-zen": "^3.1.0",
     "@nrwl/angular": "12.0.7",
     "date-fns": "^2.21.1",
+    "hammerjs": "^2.0.8",
     "lodash-es": "^4.17.21",
     "rxjs": "~6.6.3",
     "ts-key-enum": "^2.0.7",
