--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/addon-essentials": "6.2.9",
     "@storybook/addon-knobs": "6.2.9",
     "@storybook/angular": "6.2.9",
+    "@types/hammerjs": "^2.0.39",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@types/webpack": "4.41.21",
