--- a/angular.json
+++ b/angular.json
@@ -373,6 +373,38 @@
           }
         }
       }
+    },
+    "rxjs": {
+      "root": "libs/rxjs",
+      "sourceRoot": "libs/rxjs/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/rxjs/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/rxjs"],
+          "options": {
+            "jestConfig": "libs/rxjs/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "build": {
+          "builder": "@nrwl/node:package",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/libs/rxjs",
+            "tsConfig": "libs/rxjs/tsconfig.lib.json",
+            "packageJson": "libs/rxjs/package.json",
+            "main": "libs/rxjs/src/index.ts",
+            "assets": ["libs/rxjs/*.md"]
+          }
+        }
+      }
     }
   }
 }
