--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,9 @@
       "@bespunky/angular-cdk/timeline"        : ["libs/timeline"],
       "@bespunky/angular-cdk/timeline/*"      : ["libs/timeline/*"],
       "@bespunky/typescript-utils"            : ["libs/typescript-utils", "libs/typescript-utils/src/index.ts"],
-      "@bespunky/typescript-utils/*"          : ["libs/typescript-utils/src/*"]
+      "@bespunky/typescript-utils/*"          : ["libs/typescript-utils/src/*"],
+      "@bespunky/rxjs"                        : ["libs/rxjs", "libs/rxjs/src/index.ts"],
+      "@bespunky/rxjs/*"                      : ["libs/rxjs/src/*"],
     }
   },
   "exclude": ["node_modules", "tmp"]
