--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,6 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@bespunky/angular-cdk/shared"          : ["libs/shared"],
-      "@bespunky/angular-cdk/shared/*"        : ["libs/shared/*"],
       "@bespunky/angular-cdk/reactive-input"  : ["libs/reactive-input"],
       "@bespunky/angular-cdk/reactive-input/*": ["libs/reactive-input/*"],
       "@bespunky/angular-cdk/navigables"      : ["libs/navigables"],
@@ -26,7 +24,7 @@
       "@bespunky/typescript-utils"            : ["libs/typescript-utils", "libs/typescript-utils/src/index.ts"],
       "@bespunky/typescript-utils/*"          : ["libs/typescript-utils/src/*"],
       "@bespunky/rxjs"                        : ["libs/rxjs", "libs/rxjs/src/index.ts"],
-      "@bespunky/rxjs/*"                      : ["libs/rxjs/src/*"],
+      "@bespunky/rxjs/*"                      : ["libs/rxjs/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
