--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,8 +23,8 @@
       "@bespunky/angular-cdk/timeline/*"      : ["libs/timeline/*"],
       "@bespunky/typescript-utils"            : ["libs/typescript-utils", "libs/typescript-utils/src/index.ts"],
       "@bespunky/typescript-utils/*"          : ["libs/typescript-utils/src/*"],
-      "@bespunky/rxjs"                        : ["libs/rxjs", "libs/rxjs/src/index.ts"],
-      "@bespunky/rxjs/*"                      : ["libs/rxjs/src/*"]
+      "@bespunky/rxjs"                        : ["libs/rxjs", "libs/rxjs/index.ts"],
+      "@bespunky/rxjs/*"                      : ["libs/rxjs/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
