--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "rxjs": "~6.6.3",
     "ts-key-enum": "^2.0.7",
     "tslib": "^2.0.0",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.0",
@@ -66,8 +66,9 @@
     "@nrwl/tao": "12.5.0",
     "@nrwl/workspace": "12.5.0",
     "@storybook/addon-essentials": "6.2.9",
-    "@storybook/addon-knobs": "6.2.9",
-    "@storybook/angular": "6.2.9",
+    "@storybook/addon-knobs": "~6.3.0",
+    "@storybook/angular": "~6.3.0",
+    "@storybook/builder-webpack5": "~6.3.0",
     "@types/hammerjs": "^2.0.39",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
@@ -86,6 +87,7 @@
     "prettier": "2.3.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
-    "typescript": "4.2.4"
+    "typescript": "4.2.4",
+    "@storybook/manager-webpack5": "~6.3.0"
   }
 }
