--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,16 +15,19 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@bespunky/angular-cdk/reactive-input"  : ["libs/reactive-input"],
+      "@bespunky/angular-cdk/navigables": ["libs/navigables"],
+      "@bespunky/angular-cdk/navigables/*": ["libs/navigables/*"],
+      "@bespunky/angular-cdk/reactive-input": ["libs/reactive-input"],
       "@bespunky/angular-cdk/reactive-input/*": ["libs/reactive-input/*"],
-      "@bespunky/angular-cdk/navigables"      : ["libs/navigables"],
-      "@bespunky/angular-cdk/navigables/*"    : ["libs/navigables/*"],
-      "@bespunky/angular-cdk/timeline"        : ["libs/timeline"],
-      "@bespunky/angular-cdk/timeline/*"      : ["libs/timeline/*"],
-      "@bespunky/typescript-utils"            : ["libs/typescript-utils", "libs/typescript-utils/src/index.ts"],
-      "@bespunky/typescript-utils/*"          : ["libs/typescript-utils/src/*"],
-      "@bespunky/rxjs"                        : ["libs/rxjs"],
-      "@bespunky/rxjs/*"                      : ["libs/rxjs/*"]
+      "@bespunky/angular-cdk/timeline": ["libs/timeline"],
+      "@bespunky/angular-cdk/timeline/*": ["libs/timeline/*"],
+      "@bespunky/rxjs": ["libs/rxjs"],
+      "@bespunky/rxjs/*": ["libs/rxjs/*"],
+      "@bespunky/typescript-utils": [
+        "libs/typescript-utils",
+        "libs/typescript-utils/src/index.ts"
+      ],
+      "@bespunky/typescript-utils/*": ["libs/typescript-utils/src/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
