--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "@nrwl/storybook": "12.5.0",
     "@nrwl/tao": "12.5.0",
     "@nrwl/workspace": "12.5.0",
-    "@storybook/addon-essentials": "6.2.9",
-    "@storybook/addon-knobs": "~6.3.0",
-    "@storybook/angular": "~6.3.0",
-    "@storybook/builder-webpack5": "~6.3.0",
+    "@storybook/addon-essentials": "6.3.2",
+    "@storybook/angular": "6.3.2",
+    "@storybook/builder-webpack5": "latest",
+    "@storybook/manager-webpack5": "latest",
     "@types/hammerjs": "^2.0.39",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
@@ -87,7 +87,6 @@
     "prettier": "2.3.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
-    "typescript": "4.2.4",
-    "@storybook/manager-webpack5": "~6.3.0"
+    "typescript": "4.2.4"
   }
 }
