--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@bespunky/angular-cdk": ["libs/angular-cdk/src/index.ts"],
       "@bespunky/angular-cdk/navigables": ["libs/navigables"],
       "@bespunky/angular-cdk/navigables/*": ["libs/navigables/*"],
       "@bespunky/angular-cdk/reactive-input": ["libs/reactive-input"],
