--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@bespunky/angular-cdk": ["libs/angular-cdk/src/index.ts"],
+      "@bespunky/angular-cdk": ["libs/angular-cdk"],
+      "@bespunky/angular-cdk/*": ["libs/angular-cdk/*"],
       "@bespunky/angular-cdk/navigables": ["libs/navigables"],
       "@bespunky/angular-cdk/navigables/*": ["libs/navigables/*"],
       "@bespunky/angular-cdk/reactive-input": ["libs/reactive-input"],
