🔧 Configured types and peer dependency for hammerjs

--- a/libs/angular-cdk/tsconfig.lib.json
+++ b/libs/angular-cdk/tsconfig.lib.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
+    "types": ["hammerjs"],
     "lib": ["dom", "es2018"]
   },
   "exclude": ["test-setup.ts", "**/*.spec.ts"],
