--- a/libs/angular-cdk/package.json
+++ b/libs/angular-cdk/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@bespunky/angular-cdk",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1-alpha.1",
   "author": {
     "email": "us@bespunky.io",
     "name": "Shy Agam",
     "url": "https://github.com/bespunky"
   },
   "license": "MIT",
+  "repository": {"url": "https://github.com/bespunky/angular-cdk"},
   "preview": true,
   "private": false,
   "peerDependencies": {
     "@angular/common": "^12.0.0",
     "@angular/core": "^12.0.0",
-    "hammerjs": "^2.0.8"
+    "hammerjs": "^2.0.8",
+    "ts-key-enum": "^2.0.7"
   },
   "dependencies": {
     "tslib": "^2.1.0"
