✨ Generated an application for The Tiket timeline POC

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,13 @@
     "rxjs": {
       "tags": []
     },
+    "tiket": {
+      "tags": []
+    },
+    "tiket-e2e": {
+      "tags": [],
+      "implicitDependencies": ["tiket"]
+    },
     "typescript-utils": {
       "tags": []
     }
