--- a/libs/typescript-utils/package.json
+++ b/libs/typescript-utils/package.json
@@ -1,4 +1,18 @@
 {
   "name": "@bespunky/typescript-utils",
-  "version": "0.0.1"
+  "version": "0.0.1-alpha.0",
+
+  "author": {
+    "email": "us@bespunky.io",
+    "name": "Shy Agam",
+    "url": "https://github.com/bespunky"
+  },
+  "license": "MIT",
+  "preview": true,
+  "private": false,
+  "peerDependencies": {
+  },
+  "dependencies": {
+    "tslib": "^2.1.0"
+  }
 }
