--- a/libs/angular-cdk/tsconfig.lib.json
+++ b/libs/angular-cdk/tsconfig.lib.json
@@ -9,6 +9,11 @@
     "types": ["hammerjs"],
     "lib": ["dom", "es2018"]
   },
-  "exclude": ["test-setup.ts", "**/*.spec.ts"],
+  "exclude": [
+    "test-setup.ts",
+    "**/*.spec.ts",
+    "**/*.stories.ts",
+    "**/*.stories.js"
+  ],
   "include": ["**/*.ts"]
 }
