--- a/package.json
+++ b/package.json
@@ -29,64 +29,65 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "12.0.0",
-    "@angular/common": "12.0.0",
-    "@angular/compiler": "12.0.0",
-    "@angular/core": "12.0.0",
-    "@angular/forms": "12.0.0",
-    "@angular/platform-browser": "12.0.0",
-    "@angular/platform-browser-dynamic": "12.0.0",
-    "@angular/router": "12.0.0",
+    "@angular/animations": "12.2.16",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
     "@bespunky/angular-zen": "^3.1.0",
-    "@nrwl/angular": "12.5.0",
+    "@nrwl/angular": "12.10.0",
     "date-fns": "^2.21.1",
     "hammerjs": "^2.0.8",
     "lodash-es": "^4.17.21",
     "rxjs": "~6.6.3",
     "ts-key-enum": "^2.0.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.0",
-    "@angular-eslint/eslint-plugin": "12.0.0",
-    "@angular-eslint/eslint-plugin-template": "12.0.0",
-    "@angular-eslint/template-parser": "12.0.0",
-    "@angular/cli": "12.0.0",
-    "@angular/compiler-cli": "12.0.0",
-    "@angular/language-service": "12.0.0",
-    "@nrwl/cli": "12.5.0",
-    "@nrwl/cypress": "12.5.0",
-    "@nrwl/eslint-plugin-nx": "12.5.0",
-    "@nrwl/jest": "12.5.0",
-    "@nrwl/linter": "12.5.0",
-    "@nrwl/node": "12.5.0",
-    "@nrwl/nx-cloud": "12.2.7",
-    "@nrwl/storybook": "12.5.0",
-    "@nrwl/tao": "12.5.0",
-    "@nrwl/workspace": "12.5.0",
+    "@angular-devkit/build-angular": "12.2.16",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "12.2.16",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "12.2.16",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/cypress": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/nx-cloud": "13.1.6",
+    "@nrwl/storybook": "12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
     "@storybook/addon-essentials": "6.3.2",
     "@storybook/angular": "6.3.2",
     "@storybook/builder-webpack5": "latest",
     "@storybook/manager-webpack5": "latest",
     "@types/hammerjs": "^2.0.39",
-    "@types/jest": "26.0.8",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/webpack": "4.41.21",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "cypress": "^6.0.1",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.3",
-    "ng-packagr": "12.0.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
+    "ng-packagr": "12.2.7",
     "ng-samurai": "^2.0.6",
     "prettier": "2.3.1",
-    "ts-jest": "27.0.3",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
-    "typescript": "4.2.4"
+    "typescript": "4.3.5"
   }
 }
+
